syntax = "proto3";

import "server_messages.proto";
import "client_messages.proto";

enum PhoenixEvent {
  Join = 1;
  Close = 2;
  Error = 3;
  Reply = 4;
  Leave = 5;
}

message Event {
  oneof payload {
    PhoenixEvent phoenix_event = 1;
    string custom_event = 2;
  }
}

message ServerChannelMessage {
  string topic = 1;
  Event event = 2;
  string ref = 3;
  string join_ref = 4;
  ServerMessage payload = 5;
}

message ClientChannelMessage {
  string topic = 1;
  Event event = 2;
  string ref = 3;
  string join_ref = 4;
  ClientMessage payload = 5;
}
